Added in-house testing steps

--- a/Public-Release.mediawiki
+++ b/Public-Release.mediawiki
@@ -9,6 +9,11 @@
 # Push and wait for buildbot to build (be patient)
 # Wait for packages to be uploaded to webserver
 # Test new bug fixes and features on all operating systems
+# Ensure each person in the office is using the nightly
+# Wait for at least 2 days of in-house testing is done
+# Go do something else, and come back in 2 days
+# Ask every last person in the office "Is it stable?"
+# If everyone thinks it's stable, go ahead with the release
 # Tag the release branch (branch-stage)
 # Merge release branch into master
 # Delete the release branch
