Updated Public Release (mediawiki)

--- a/Public-Release.mediawiki
+++ b/Public-Release.mediawiki
@@ -23,8 +23,7 @@
 ## <code>./deploy.sh -b v1.7.5-stable-fa85a24 -r v1.7.5-stable-fa85a24</code>
 # Set current version in website settings in /home/website/website-live
 # Test or download links
-# Download all installers into NAS
-## \\BABBAGE\Engineering\Installers\Synergy
+# Download all installers into NAS: \\BABBAGE\Engineering\Installers\Synergy
 # Add previous version to alternate downloads by modify php file
 # Install previous version and test update check feature
 # '''If master:''' set next version in <code>CMakeLists.txt</code>
