Updated Android client (mediawiki)

--- a/Android-client.mediawiki
+++ b/Android-client.mediawiki
@@ -8,4 +8,4 @@ If you find this client useful, donate to the original creator.
 
 '''Bugs:''' http://sourceforge.net/p/synergyandroid/bugs/
 
-'''Donate:''' DFQj57xv8ujR44RPtkMU9jS5bR3rTiYh7j
+'''Donate:''' DFQj57xv8ujR44RPtkMU9jS5bR3rTiYh7j (Dodgecoin)
