Updated Sending logs (mediawiki)

--- a/Sending-logs.mediawiki
+++ b/Sending-logs.mediawiki
@@ -11,4 +11,4 @@ Then click '''Apply''', or '''Stop''' and then '''Start''' if using desktop mode
 [[Images/ApplyHighlight.png]]
 
 
-Right click the log output area and click '''Select All''' then '''Copy'''. Paste your results on [http://pastebin.com/ Pastebin] and send us the link!
+Right click the log output area and click '''Select All''' then '''Copy'''. Paste your results on [http://pastebin.com/ Pastebin] or [https://gist.github.com/ Gist] then send us the link!
