--- a/User-FAQ.mediawiki
+++ b/User-FAQ.mediawiki
@@ -163,9 +163,10 @@ On Windows machines with HiDPI screens, Synergy malfunctions. To fix this, chang
 
 ===I've updated to Fedora 25 and Synergy no longer works?===
 
-This is because Fedora 25 has switched to use Wayland by default instead of XOrg server.
-You can re-enable XOrg as a temporary workaround by doing the following:
-Edit `/etc/gdb/custom.conf` and change line 5 per line 4. You'll then need to reboot. This has the machine fall back onto Xorg for the session manager.
+This is because Fedora 25 has switched to use Wayland by default instead of Xorg server.
+You can re-enable Xorg as a temporary workaround by editing ''/etc/gdb/custom.conf'' and changing line 5 per line 4. 
+
+You'll then need to reboot. This has the machine fall back onto Xorg for the session manager.
 
  [daemon] 
  # Uncoment the line below to force the login screen to use Xorg 
