--- a/Compiling.mediawiki
+++ b/Compiling.mediawiki
@@ -150,5 +150,7 @@ QT_SELECT=4 ./hm.sh conf -g1
 After compiling, the binaries can be found in the ''bin'' directory in the root of the source tree (not in the build directory).
 
 ==Building installers==
-Use the <code>hm package [os]</code> command to build installers. On Windows the [http://wixtoolset.org/ WiX Toolset] is required.
+Use the <code>hm package [os]</code> command to build installers. (<code>[os] = {deb,mac,win}</code>)
+
+On Windows the [http://wixtoolset.org/ WiX Toolset] is required.
 Note: On Windows, when using Visual C++ 2010 Express, it does not provide the Merge Module needed for packaging.
