Update to match my experience building current master on OSX 10.11.6 ( I only had MacOSX.sdk      MacOSX10.12.sdk - ended up building with 10.12 which so far works fine, testing osx Server with Ubuntu client

--- a/Compiling.mediawiki
+++ b/Compiling.mediawiki
@@ -41,12 +41,10 @@ brew install cmake
 brew install qt
 ```
 * Fix "./ext/toolchain/commands1.py"
-** In the function <code>configureCore()</code> at approx line 433, change:
-*** <code>elif sys.platform == "darwin":</code> to read <code>if sys.platform == "darwin":</code>
-** In the function <code>macPostGuiMake()</code> at approx line 762 and 765 change the path of <code>frameworkRootDir</code> to be what your Qt library path is, something like:
+** In the function <code>macPostGuiMake()</code> at approx line 781 change the path of <code>frameworkRootDir</code> to be what your Qt library path is, something like:
 *** <code>frameworkRootDir = "/usr/local/Cellar/qt/4.8.7_2/Frameworks"</code>
 ** See [https://github.com/symless/synergy/issues/4572 this] github issue for more information.
-* Now configure and build - if running El Capitan, change the mac-sdk parameter below from <code>10.10</code> to <code>10.11</code>
+* Now configure and build - if running El Capitan, change the mac-sdk parameter below from <code>10.10</code> to <code>10.11</code> or as applicable from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/
 
 ```
 ./hm.sh conf -g2 --mac-sdk 10.10 --mac-identity test
