--- a/Compiling.mediawiki
+++ b/Compiling.mediawiki
@@ -87,9 +87,13 @@ If you already have [MacPorts], run:
 ===Ubuntu 10.04 to 15.10===
  sudo apt-get install cmake make g++ xorg-dev libqt4-dev libcurl4-openssl-dev libavahi-compat-libdnssd-dev libssl-dev libx11-dev
 
-===CentOS 6 & 7===
+===CentOS 6/7===
  sudo yum install cmake make gcc-c++ libX11-devel libXext-devel libXi-devel libXtst-devel libXinerama-devel libcurl-devel qt-devel avahi-compat-libdns_sd-devel openssl-devel rpm-build rpmlint
  PATH="$PATH:/usr/lib64/qt4/bin:/usr/lib/qt4/bin"
+
+After compiling, run the following to build and install the RPM:
+  ./hm.sh package rpm
+  sudo rpm -i bin/synergy-master-*.rpm 
 
 ===Debian 7/8===
   sudo apt-get install build-essential cmake libavahi-compat-libdnssd-dev libcurl4-openssl-dev libssl-dev lintian python qt4-dev-tools xorg-dev fakeroot
@@ -150,7 +154,7 @@ QT_SELECT=4 ./hm.sh conf -g1
 After compiling, the binaries can be found in the ''bin'' directory in the root of the source tree (not in the build directory).
 
 ==Building installers==
-Use the <code>hm package [os]</code> command to build installers. (<code>[os] = {deb,mac,win}</code>)
+Use the <code>hm package [os]</code> command to build installers. (<code>[os] = {deb,mac,rpm,win}</code>)
 
 On Windows the [http://wixtoolset.org/ WiX Toolset] is required.
 Note: On Windows, when using Visual C++ 2010 Express, it does not provide the Merge Module needed for packaging.
