--- a/Text-Config.mediawiki
+++ b/Text-Config.mediawiki
@@ -14,7 +14,7 @@ If you need to access a feature that is not available in the GUI, but otherwise 
 
 ==Why would I want to use a text-based config?==
 
-The number one reason is that you don't really have a choice. If you aren't using a GUI than you have to use a text-based config file.
+The number one reason is that you don't really have a choice. If you aren't using a GUI then you have to use a text-based config file.
 
 The second reason is that it gives you more control. The GUI cannot create advanced configuration such as non-reciprocal connections. An example of a non-reciprocal connection would be that if you go right from screen A you get to screen B, but if you then go left from screen B you get to screen C rather than back to screen A as you would in a reciprocal connection.
 
