Updated Text Config (mediawiki)

--- a/Text-Config.mediawiki
+++ b/Text-Config.mediawiki
@@ -1,6 +1,6 @@
 ==About textual configuration files==
 
-Most of the time, needing to deal with text-based configuration files directly can be avoided by using the GUI, however there are times when a text config is necessary.
+Needing to deal with text-based configuration files directly can be avoided by using the GUI. However, if you want to run Synergy from the [[command line]], you'll need to write your own config file.
 
 When a text-based configuration file is needed you can specify it on the command-line using the <code>--config</code> option. Example:
 
